# search-and-rescue-robot

./: CMakeLists.txt  README.md  package.xml
config/: base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  move_base_params.yaml
launch/: complete_system.launch  gazebo_sim.launch  manual_control.launch  manual_mode.launch
logs/20251122_235725/: events.csv  mission_summary.json  odometry.csv  sensors.csv
logs/20251123_084824/: events.csv  mission_summary.json  odometry.csv  sensors.csv
logs/20251123_085102/: events.csv  mission_summary.json  odometry.csv  sensors.csv
logs/20251123_085604/: events.csv  mission_summary.json  odometry.csv  sensors.csv
logs/20251123_085937/: events.csv  mission_summary.json  odometry.csv  sensors.csv
logs/20251123_091815/: events.csv  mission_summary.json  odometry.csv  sensors.csv
logs/20251123_091932/: events.csv  sensors.csv
logs/20251123_222503/: events.csv  mission_summary.json  sensors.csv  victims.csv
logs/20251124_061632/: mission_summary.json  sensors.csv
logs/20251124_063414/: events.csv  mission_summary.json  odometry.csv  sensors.csv
logs/20251124_063550/: events.csv  mission_summary.json  odometry.csv  sensors.csv
logs/20251124_064733/: mission_summary.json  odometry.csv  sensors.csv
logs/20251124_065028/: mission_summary.json  odometry.csv  sensors.csv
logs/20251124_065104/: mission_summary.json  odometry.csv  sensors.csv
logs/20251124_070233/: mission_summary.json  odometry.csv  sensors.csv
logs/20251124_070730/: mission_summary.json  odometry.csv  sensors.csv
logs/20251124_071245/: mission_summary.json  odometry.csv  sensors.csv
logs/20251124_071531/: mission_summary.json  odometry.csv  sensors.csv
logs/20251124_074721/: events.csv  mission_summary.json  odometry.csv  sensors.csv  victims.csv
logs/20251124_075115/: mission_summary.json  odometry.csv  sensors.csv
logs/20251124_075454/: mission_summary.json  odometry.csv  sensors.csv
logs/20251124_075804/: events.csv  mission_summary.json  odometry.csv  sensors.csv  victims.csv
logs/20251124_080025/: odometry.csv  sensors.csv
logs/20251124_122320/: mission_summary.json  odometry.csv  sensors.csv  victims.csv
logs/20251124_122651/: mission_summary.json  odometry.csv  sensors.csv
logs/20251124_124758/: mission_summary.json  odometry.csv  sensors.csv
rviz/: sar_config.rviz
scripts/: communication_relay.py  data_logger.py  detection_monitor.py  path_planner.py  sar_controller.py  sar_dashboard.py  victim_detector.py  victim_marker_publisher.py
urdf/: rescue_robot.urdf.xacro
worlds/: disaster_site.world
