<?xml version="1.0"?>
<package format="2">
  <name>search_rescue</name>
  <version>1.0.0</version>
  <description>ROS package for autonomous search and rescue operations</description>
  
  <maintainer email="rescue@example.com">SAR Team</maintainer>
  <license>MIT</license>
  
  <author>SAR Development Team</author>
  
  <buildtool_depend>catkin</buildtool_depend>
  
  <!-- Dependencies -->
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>move_base_msgs</depend>
  <depend>actionlib</depend>
  <depend>actionlib_msgs</depend>
  <depend>tf</depend>
  <depend>tf2_ros</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  
  <exec_depend>python-opencv</exec_depend>
  <exec_depend>python-numpy</exec_depend>
  
  <export>
  </export>
</package>
